--- a/css/main.css
+++ b/css/main.css
@@ -1,31 +1,5 @@
 /*! HTML5 Boilerplate v5.0 | MIT License | http://h5bp.com/ */
 
-html {
-    color: #14171A;
-    font-size: 1em;
-    line-height: 1.4;
-    background-color: #F5F8FA;
-}
-
-::-moz-selection {
-    background: #b3d4fc;
-    text-shadow: none;
-}
-
-::selection {
-    background: #b3d4fc;
-    text-shadow: none;
-}
-
-hr {
-    display: block;
-    height: 1px;
-    border: 0;
-    border-top: 1px solid #ccc;
-    margin: 1em 0;
-    padding: 0;
-}
-
 audio,
 canvas,
 iframe,
@@ -156,33 +130,78 @@ nav a:hover {
    Author's custom styles
    ========================================================================== */
 
-article a {
+a {
   text-decoration: none;
-  color: #657786;
+  color: #333;
 }
 
-article a:hover {
+a:hover {
   color: #fff;
-  background-color: #657786;
+  background-color: #333;
 }
 
 article section {
-  color: #31485B;
+  color: #333;
 }
 
 article footer {
-  color: #657786;
+  color: #666;
   font-size: 0.9em;
 }
 
+html, body {
+  height: 100%;
+}
 
+html {
+    color: #14171A;
+    font-size: 1em;
+    line-height: 1.4;
+    background-color: #f5f5f5;
+}
 
+::-moz-selection {
+    background: #b3d4fc;
+    text-shadow: none;
+}
 
+::selection {
+    background: #b3d4fc;
+    text-shadow: none;
+}
 
+hr {
+    display: block;
+    height: 1px;
+    border: 0;
+    border-top: 1px solid #ccc;
+    margin: 1em 0;
+    padding: 0;
+}
 
+#portrait {
+  width: 300px;
+  display: block;
+  border: 1px solid #ddd;
+  border-radius: 150px;
+}
 
+#twitter {
+  width: 55px;
+}
 
+#linkedin {
+  margin: 10px;
+}
 
+#github {
+  margin: 10px;
+  width: 35px;
+}
+
+aside li {
+  list-style: none;
+}
 
 
 /* ==========================================================================
